--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -11,15 +11,37 @@
     "speed": "скорости",
     "closing": "Если сайт лагает — я закрываю вкладку.",
     "EduExp": "Образование и опыт работы",
-    "ButSkills": "А как же ",
-    "skillspan": " навыки",
+    "ButSkills": "А что на счёт ",
+    "skillspan": " навыков",
     "SomeSkills": "Технологии, с которыми я знакома. Мой стек постоянно растет",
     "Partner": "Хотите поработать со мной?",
     "Open": "Я открыта к фрилансу и креативным коллаборациям. Давайте оживим ваши идеи — чистый код, плавный UI и реальный результат",
+    "portfolio": {
+        "galassia":{
+            "description": "Galassia.uz — корпоративный сайт для локального производителя БАДов и витаминов. Акцент на чистом дизайне и удобной навигации. На сайте каталог продукции, информация о бренде и форма обратной связи",
+            "Ledart": "Ledart.kz — компания, предлагающая продажу и установку LED-экранов по всему Казахстану. Сайт подчёркивает консалтинг, каталог продукции, установку под ключ и постгарантийную поддержку",
+            "Agency": "Многоязычный сайт для международного PR и маркетингового агентства. Включает описание услуг, кейсы и динамические формы обратной связи — всё в стиле современного и премиального бренда"
+        }
+    },
+
+
     "hero":{
         "title": "Я фронтенд-разработчик",
         "build": "Я создаю интерфейсы...",
         "convert": "...и превращаю дизайн в код",
         "desc": "Фронтендер, который совмещает логику и эстетику. Я проектирую и создаю цифровые продукты, попадающие в ту самую точку между кайфом для пользователя и целями бизнеса."
-    }
+    },
+
+    "experience": {
+        "proweb": {
+            "title": "Proweb",
+            "descr": "Курс веб-программирования",
+            "time": "10 месяцев (Декабрь 2023 - Сентябрь 2024)"
+        },
+        "agency": {
+            "title": "The Agency",
+            "descr": "Маркетинговое агентство в Узбекистане",
+            "time": "9 месяцев (Ноябрь 2024 - Июль 2025)"
+        }
+  }
 }
